# c-starter

./: CMakeLists.txt  README.md  main.c
cmake/: FindCheck.cmake
include/: hello.h
src/: CMakeLists.txt  hello.c  main.c
tests/: CMakeLists.txt  test_hello.c
